k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicd-app
  template:
    metadata:
      labels:
        app: cicd-app
    spec:
      containers:
        - name: app
          image: YOUR_DOCKER_USERNAME/cicd-app:latest
          ports:
            - containerPort: 5000
