k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-service
spec:
  selector:
    app: cicd-app
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
