k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cicd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-service
                port:
                  number: 5000
